--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ Email: fyq at berkeley dot edu<br>
 <hr style="width:30%;text-align:left;margin-left:0">
   
   
-<h3>Research</h3>
+<h3>Preprint</h3>
 <p>
-<b>Varieties of minimal rational tangents (VMRT):</b> The Varieties of Minimal Rational Tangents theory mainly focuses on uniruled projective manifolds, which plays an essential role in algebraic geometry. A new purely analytic proof for a theorem regarding the second fundamental form is given, whose original proof was given by <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.nmok"> Ngaiming Mok</a>.<br>
+<b>a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> 2024 May.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -68,10 +68,8 @@ Email: fyq at berkeley dot edu<br>
 
 <h3>Academic activities</h3>
 <p>
-<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence</a>:</b> Fall 2022, coorganized with Qiuyu Ren <br>
+<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence</a>:</b> Fall 2022, coorganized with<a https://math.berkeley.edu/~qiuyu/> Qiuyu Ren</a>. <br>
 </p><p>
-<b><a href="https://fyqing.github.io/homological_mirror_symmetry_spring2023.com/?fbclid=IwAR1estQvSPe4U_jQ8H7Wqf-p2aPkD9z_sOMzssAVMLe0BjFSTrtW35EXP9s">Mirror Symmetry</a>:</b> Spring 2023<br>
-</p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
   
@@ -89,16 +87,24 @@ Email: fyq at berkeley dot edu<br>
 
 <h3>Teaching</h3>
 <p>
-<b><br>
-  
+<b>Fall 2021, MATH 1A with Mark Haiman.<br>
 </p>
+
+<p>
+<b>Spring 2022, MATH 1B with John Lott.</b> 
+</p>
+
+<p>
+<b>Fall 2022, MATH 32 with Magda Hlavacek.</b> 
+</p>
+
+<p>
+<b>Spring 2023, MATH 1B with Zvezdelina Stankova.</b> 
+</p>
+  
 <hr>
 <p>
 
-<h3>Personal</h3>
-<p>
-<br>
-</p>
 
 <figure align="center">
 <img src="" alt="" width="" height="">
