--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Email: fyq at berkeley dot edu<br>
   
 <h3>Preprint</h3>
 <p>
-<b>a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> 2024 May.<br>
+<b><a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> 2024 May.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -87,26 +87,26 @@ Email: fyq at berkeley dot edu<br>
 
 <h3>Teaching</h3>
 <p>
-<b>Fall 2021, MATH 1A with Mark Haiman.<br>
+Fall 2021, MATH 1A with Mark Haiman.
 </p>
 
 <p>
-<b>Spring 2022, MATH 1B with John Lott.</b> 
+Spring 2022, MATH 1B with John Lott.
 </p>
 
 <p>
-<b>Fall 2022, MATH 32 with Magda Hlavacek.</b> 
+Fall 2022, MATH 32 with Magda Hlavacek.
 </p>
 
 <p>
-<b>Spring 2023, MATH 1B with Zvezdelina Stankova.</b> 
+Spring 2023, MATH 1B with Zvezdelina Stankova.
 </p>
   
 <hr>
 <p>
 
 <h3>Miscellanies</h3>
-<p><a https://math.jhu.edu/~savitt/GTM.html>Which GTM am I</a>
+<p><a href="https://math.jhu.edu/~savitt/GTM.html">Which GTM am I</a>
 </p>
 
 <figure align="center">
