--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p {
 <h1>Yueqing Feng</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<p>I'm a Ph.D. student at UC Berkeley supervised by<a href="https://math.berkeley.edu/people/faculty/song-sun"> Song Sun</a>. My reseach interest broadly lies in complex geometry.</p>
+<p>I'm a Ph.D. student at UC Berkeley supervised by<a href="https://math.berkeley.edu/people/faculty/song-sun"> Song Sun</a>. My reseach interest lies in complex differential geometry.</p>
 
 <h3>Contact</h3>
 <p>
