--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Email: fyq at berkeley dot edu<br>
 
 <h3>Academic activities</h3>
 <p>
-<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence</a>:</b> Fall 2022, coorganized with<a https://math.berkeley.edu/~qiuyu/> Qiuyu Ren</a>. <br>
+<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence</a>:</b> Fall 2022, coorganized with<a href="https://math.berkeley.edu/~qiuyu/"> Qiuyu Ren</a>. <br>
 </p><p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
