--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p {
 <h1>Yueqing Feng</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<p>I'm a Ph.D. student at <a href="https://math.berkeley.edu">Uuniversity of California, Berkeley</a> supervised by<a href="https://math.berkeley.edu/people/faculty/song-sun"> Song Sun</a>. Prior to Berkeley, I received my Bachelor of Science in Mathematics from the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.</p> 
+<p>I'm a Ph.D. student at the <a href="https://math.berkeley.edu">University of California, Berkeley</a> supervised by<a href="https://math.berkeley.edu/people/faculty/song-sun"> Song Sun</a>. Prior to Berkeley, I received my Bachelor of Science in Mathematics from the <a href="https://hkumath.hku.hk/web/index.php">University of Hong Kong</a>.</p> 
   
 <p>My reseach interest lies in complex differential geometry. More specifically, I study canonical metrics on Kähler manifolds. </p>
 
