--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Email: fyq at berkeley dot edu<br>
   
 <h3>Preprint</h3>
 <p>
-<b><a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> 2024 May.<br>
+<b><a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> May 2024.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
