--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@ Email: fyq at berkeley dot edu<br>
 <hr style="width:30%;text-align:left;margin-left:0">
   
   
-<h3>Preprint</h3>
+<h3>Preprints</h3>
 <p>
 <b><a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> May 2024.<br>
+<b><a href="https://arxiv.org/abs/2411.01459">Examples of toric scalar-flat Kähler surfaces with mixed-type ends</a>,</b> Nov 2024.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -70,7 +71,8 @@ Email: fyq at berkeley dot edu<br>
 
 <h3>Academic activities</h3>
 <p>
-<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence</a>:</b> Fall 2022, coorganized with<a href="https://math.berkeley.edu/~qiuyu/"> Qiuyu Ren</a>. <br>
+<b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence seminar</a>:</b> Fall 2022, coorganized with<a href="https://math.berkeley.edu/~qiuyu/"> Qiuyu Ren</a>. <br>
+<b><a href="https://fyqing.github.io/cheeger_colding_naber_2024/">Cheeger-Colding-Nabor theory seminar</a>:</b> Fall 2024. <br>
 </p><p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -102,6 +104,10 @@ Fall 2022, MATH 32 with Magda Hlavacek.
 
 <p>
 Spring 2023, MATH 1B with Zvezdelina Stankova.
+</p>
+
+<p>
+Fall 2024, MATH 16A with Arun Sharma.
 </p>
   
 <hr>
