--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@ Email: fyq at berkeley dot edu<br>
   
 <h3>Preprints</h3>
 <p>
-<b><a href="https://arxiv.org/abs/2405.11952">A gluing construction of constant scalar curvature Kähler metrics of Poincaré type</a>,</b> May 2024.<br>
-<b><a href="https://arxiv.org/abs/2411.01459">Examples of toric scalar-flat Kähler surfaces with mixed-type ends</a>,</b> Nov 2024.<br>
+<b>A gluing construction of constant scalar curvature Kähler metrics of Poincaré type<a href="https://arxiv.org/abs/2405.11952">arXiv</a>,</b> May 2024.<br>
+</p>
+
+<p>
+<b>Examples of toric scalar-flat Kähler surfaces with mixed-type ends<a href="https://arxiv.org/abs/2411.01459">arXiv</a>,</b> Nov 2024.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -72,7 +75,10 @@ Email: fyq at berkeley dot edu<br>
 <h3>Academic activities</h3>
 <p>
 <b><a href="https://math.berkeley.edu/~qiuyu/Kobayashi-Hitchin.html">Koyabashi Hitchin correspondence seminar</a>:</b> Fall 2022, coorganized with<a href="https://math.berkeley.edu/~qiuyu/"> Qiuyu Ren</a>. <br>
-<b><a href="https://fyqing.github.io/cheeger_colding_naber_2024/">Cheeger-Colding-Nabor theory seminar</a>:</b> Fall 2024. <br>
+</p>
+
+<p>
+  <b><a href="https://fyqing.github.io/cheeger_colding_naber_2024/">Cheeger-Colding-Nabor theory seminar</a>:</b> Fall 2024. <br>
 </p><p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
