--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ A gluing construction of constant scalar curvature Kähler metrics of Poincaré 
 </p>
 
 <p>
-<b>Examples of toric scalar-flat Kähler surfaces with mixed-type ends, <a href="https://arxiv.org/abs/2411.01459">arXiv:2411.01459</a>,</b> Nov 2024.<br>
+Examples of toric scalar-flat Kähler surfaces with mixed-type ends, <a href="https://arxiv.org/abs/2411.01459">arXiv:2411.01459</a>, Nov 2024.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
