--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ Email: fyq at berkeley dot edu<br>
   
 <h3>Preprints</h3>
 <p>
-A gluing construction of constant scalar curvature Kähler metrics of Poincaré type, <a href="https://arxiv.org/abs/2405.11952">arXiv:2405.11952</a>, May 2024.<br>
+A gluing construction of constant scalar curvature Kähler metrics of Poincaré type, <a href="https://arxiv.org/abs/2405.11952">arXiv:2405.11952</a>.<br>
 </p>
 
 <p>
-Examples of toric scalar-flat Kähler surfaces with mixed-type ends, <a href="https://arxiv.org/abs/2411.01459">arXiv:2411.01459</a>, Nov 2024.<br>
+Examples of toric scalar-flat Kähler surfaces with mixed-type ends, <a href="https://arxiv.org/abs/2411.01459">arXiv:2411.01459</a>.<br>
  
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -78,7 +78,7 @@ Examples of toric scalar-flat Kähler surfaces with mixed-type ends, <a href="ht
 </p>
 
 <p>
-<a href="https://fyqing.github.io/cheeger_colding_naber_2024/">Cheeger-Colding-Nabor theory seminar</a>: Fall 2024. <br>
+<a href="https://fyqing.github.io/cheeger_colding_naber_2024/">Cheeger-Colding-Naber theory seminar</a>: Fall 2024. <br>
 </p><p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
